 * Locale modifiers such as "@euro" are now stripped from locale identifiers
   when parsing (ticket #136).
 * The system locales "C" and "POSIX" are now treated as aliases for
   "en_US_POSIX", for which the CLDR provides the appropriate data. Thanks to
   Manlio Perillo for the suggestion.
 * Fixed JavaScript extraction for regular expression literals (ticket #138)
   and concatenated strings.


Version 0.9.3
http://svn.edgewall.org/repos/babel/tags/0.9.3/
(Jul 9 2008, from branches/stable/0.9.x)

 * Fixed invalid message extraction methods causing an UnboundLocalError.
 * Extraction method specification can now use a dot instead of the colon to
   separate module and function name (ticket #105).
 * Fixed message catalog compilation for locales with more than two plural
   forms (ticket #95).
 * Fixed compilation of message catalogs for locales with more than two plural
   forms where the translations were empty (ticket #97).
 * The stripping of the comment tags in comments is optional now and
   is done for each line in a comment.
 * Added a JavaScript message extractor.
 * Updated to CLDR 1.6.
 * Fixed timezone calculations when formatting datetime and time values.
 * Added a `get_plural` function into the plurals module that returns the
   correct plural forms for a locale as tuple.
 * Added support for alias definitions in the CLDR data files, meaning that
   the chance for items missing in certain locales should be greatly reduced
   (ticket #68).


Version 0.9.2
http://svn.edgewall.org/repos/babel/tags/0.9.2/
(Feb 4 2008, from branches/stable/0.9.x)

 * Fixed catalogs' charset values not being recognized (ticket #66).
 * Numerous improvements to the default plural forms.
 * Fixed fuzzy matching when updating message catalogs (ticket #82).
 * Fixed bug in catalog updating, that in some cases pulled in translations
   from different catalogs based on the same template.
 * Location lines in PO files do no longer get wrapped at hyphens in file